--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ipld/dag-cbor": "^9.2.2",
     "@noble/curves": "^1.9.0",
     "base32-encode": "^2.0.0",
+    "base64url": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
