--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ipld/dag-cbor": "^9.2.2",
     "@noble/curves": "^1.9.0",
+    "axios": "^1.6.7",
     "base32-encode": "^2.0.0",
     "base64url": "^3.0.1",
     "cors": "^2.8.5",
