--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "base64url": "^3.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jose": "^5.2.2",
     "jsonwebtoken": "^9.0.2",
     "multiformats": "^13.3.2",
     "node-fetch": "^3.3.2",
