--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "test": "node test_pds.js"
   },
   "dependencies": {
+    "@ipld/car": "^5.4.1",
     "@ipld/dag-cbor": "^9.2.2",
     "@noble/curves": "^1.9.0",
     "axios": "^1.6.7",
     "base32-encode": "^2.0.0",
     "base64url": "^3.0.1",
+    "cbor": "^10.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jose": "^5.2.2",
