--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pds-demo",
+  "name": "demo-pds-js",
   "version": "1.0.0",
   "description": "AT Protocol PDS Implementation",
   "main": "pds.js",
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@ipld/car": "^5.4.1",
-    "@ipld/dag-cbor": "^9.2.2",
-    "@noble/curves": "^1.9.0",
+    "@ipld/dag-cbor": "^9.2.3",
+    "@noble/curves": "^1.9.1",
+    "@noble/hashes": "^1.8.0",
     "axios": "^1.6.7",
     "base32-encode": "^2.0.0",
     "base64url": "^3.0.1",
     "cbor": "^10.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "jose": "^5.2.2",
-    "jsonwebtoken": "^9.0.2",
-    "multiformats": "^13.3.2",
-    "node-fetch": "^3.3.2",
+    "jsonwebtoken": "^9.0.0",
+    "multiformats": "^13.3.3",
+    "node-fetch": "^3.3.0",
+    "node-forge": "^1.3.1",
     "sqlite3": "^5.1.7",
     "uint8arrays": "^5.1.0",
     "winston": "^3.11.0"
