--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "demo-pds-js",
+  "name": "pds-demo",
   "version": "1.0.0",
-  "type": "module",
-  "description": "JavaScript implementation of a Personal Data Server (PDS) for the AT Protocol",
+  "description": "AT Protocol PDS Implementation",
   "main": "pds.js",
+  "type": "module",
   "scripts": {
     "start": "node pds.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test_pds.js"
   },
   "dependencies": {
     "@ipld/car": "^5.4.1",
-    "@ipld/dag-cbor": "^9.0.7",
-    "@noble/curves": "^1.2.0",
+    "@ipld/dag-cbor": "^9.2.2",
+    "@noble/curves": "^1.9.0",
     "@noble/hashes": "^1.3.3",
-    "async-lock": "^1.4.1",
-    "base32-encode": "^1.2.0",
+    "axios": "^1.6.7",
+    "base32-encode": "^2.0.0",
     "base64url": "^3.0.1",
+    "cbor": "^10.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jose": "^5.2.2",
     "jsonwebtoken": "^9.0.2",
-    "multiformats": "^12.1.3",
+    "multiformats": "^13.3.2",
+    "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
     "sqlite3": "^5.1.7",
-    "uint8arrays": "^4.0.6",
+    "uint8arrays": "^5.1.0",
     "winston": "^3.11.0",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "async-lock": "^1.4.0"
   }
 }
