--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@ipld/dag-cbor": "^3.0.0",
     "@noble/curves": "^1.2.0",
     "async-lock": "^1.4.0",
+    "axios": "^1.6.7",
+    "base32-encode": "^1.0.1",
+    "base64url": "^3.0.1",
     "better-sqlite3": "^8.5.0",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
@@ -20,7 +23,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multiformats": "^10.0.0",
+    "node-forge": "^1.3.1",
     "sqlite3": "^5.1.6",
+    "uint8arrays": "^4.0.6",
     "winston": "^3.17.0",
     "ws": "^8.13.0"
   },
