--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@atproto/api": "^0.3.0",
+    "@ipld/car": "^5.4.2",
     "@ipld/dag-cbor": "^3.0.0",
     "@noble/curves": "^1.2.0",
     "async-lock": "^1.4.0",
@@ -23,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multiformats": "^10.0.0",
+    "node-fetch": "^3.3.2",
     "node-forge": "^1.3.1",
     "sqlite3": "^5.1.6",
     "uint8arrays": "^4.0.6",
