--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "base64url": "^3.0.1",
     "better-sqlite3": "^8.5.0",
     "buffer": "^6.0.3",
+    "cbor-x": "^1.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
