--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@atproto/api": "^0.3.0",
+    "@atproto/common": "^0.4.11",
+    "@atproto/identity": "^0.4.8",
+    "@atproto/xrpc": "^0.7.0",
     "@ipld/car": "^5.4.2",
     "@ipld/dag-cbor": "^3.0.0",
     "@noble/curves": "^1.2.0",
+    "@noble/secp256k1": "^2.3.0",
     "async-lock": "^1.4.0",
     "axios": "^1.6.7",
     "base32-encode": "^1.0.1",
@@ -23,6 +27,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "multiformats": "^10.0.0",
     "node-fetch": "^3.3.2",
